[tool.poetry]
name = "stackedproportionalbarchart"
version = "0.1.0"
description = ""
authors = ["Jonathan Gupton <jonathan.gupton@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
